added geoguesser mode
